add new file test.txt

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/bootstrap-responsive.css">
 </head>
 <body>
-<table class="table table-bordered">
-    ...
-</table>
+
+
+this is change
 
 <h1>Hello workld!</h1>
 
